@@ -1,5 +1,6 @@
 version 0.82.03
 	More debug messages
+	jpeg contrast/hue/sharpness/saturation GUI bugfix
 
 version 0.82.02 ( 2015-06-28 )
 	--pentax_debug_mode ( thx Samo Penic )
